--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,20 +44,18 @@ dependencies {
     implementation "io.insert-koin:koin-core:3.2.0"
     // Koin main features for Android
     implementation "io.insert-koin:koin-android:3.2.0"
-// No more koin-android-viewmodel, koin-android-scope, koin-android-fragment
-// Java Compatibility
+    // No more koin-android-viewmodel, koin-android-scope, koin-android-fragment
+    // Java Compatibility
     implementation "io.insert-koin:koin-android-compat:3.2.0"
-// Jetpack WorkManager
-//    implementation "io.insert-koin:koin-androidx-workmanager:3.2.0"
-// Navigation Graph
+    // Navigation Graph
     implementation "io.insert-koin:koin-androidx-navigation:3.2.0"
-// Jetpack Compose
-    implementation "io.insert-koin:koin-androidx-compose:3.2.0"
+//     Jetpack Compose
+//    implementation "io.insert-koin:koin-androidx-compose:3.2.0"
     //navigations
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
-    //glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //for image rendering
+    implementation 'io.coil-kt:coil:2.1.0'
 
     //encrypted storage
     implementation "androidx.security:security-crypto-ktx:1.1.0-alpha02"
@@ -68,6 +66,13 @@ dependencies {
     implementation "me.relex:circleindicator:2.1.6"
     //opt view
     implementation "com.github.aabhasr1:OtpView:v1.1.2-ktx"
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0-alpha01"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
